# ocserv-admin-mcp

./: .gitignore  AGENTS.md  README.md  TOOLS.md  pyproject.toml  requirements.txt
.opencode/: opencode.json
.opencode/agents/: grace-contract-reviewer.md  grace-fixer.md  grace-module-implementer.md  grace-verification-reviewer.md
deploy/: README.md  ocserv-admin.service  ocserv-admin.sudoers
deploy/examples/: generic-mcp-client.example.json  nanobot-config.example.json
docs/: api.md  development-plan.xml  knowledge-graph.xml  operational-packets.xml  requirements.xml  technology.xml  verification-plan.xml
src/: __init__.py  action_registry.py  adapter_commands.py  adapter_mutations.py  adapter_templates.py  audit_log.py  backend_client.py  confirmation_state.py  file_lock.py  logging_config.py  mcp_server.py  metrics.py  ocserv_adapter.py  ocserv_admin_api.py  policy_group_manager.py  safety_controls.py  session_manager.py  user_lifecycle_manager.py
tests/: __init__.py
tests/fixtures/: fake_occtl  fake_success.py  fake_sudo
tests/integration/: __init__.py  test_mcp_sdk_stdio_interop.py  test_mcp_server_integration.py  test_ocserv_admin_api.py
tests/unit/: __init__.py  test_audit_log.py  test_backend_client.py  test_confirmation_state.py  test_mcp_server.py  test_ocserv_adapter.py  test_policy_group_manager.py  test_safety_controls.py  test_session_manager.py  test_user_lifecycle_manager.py
